# deepdata-archive

./: .gitignore  FilmFlareContentBasedFilter.ipynb  ML Report.ipynb  ML_Report.ipynb  customer_data_analysis.ipynb  fix_render.py  pyproject.toml
Agent-AI/: ai_agent.py  backend.py  frontend.py  intents.json  reagent_ai_code.py  test.ipynb
Agent-AI/course/: agent-1.ipynb  agent.py
Book-recommender-LLM/: Data-exploration.ipynb  vector-search.ipynb
Fuel-Economy/: Problem-1.ipynb  Problem-2.ipynb  merged_df.csv  problem-3-cluster.ipynb  problem-3-mpg.ipynb  problem-3-smartway.ipynb  readme.md
Fuel-Economy/model/: mpg_decision_tree_model.pkl  smartway_decision_tree_model.pkl
Fuel-Economy/predicator/: predicator_smart_way.py
air_pollution/: epa.ipynb
algo/: regression.py
algo_lr_check/: main.ipynb
chat/: app.py  main.py
child_parent/: main.ipynb
ecommerce/: ecommerce_sample_data.csv  eda.ipynb
live_stock/: data_fetcher.py  data_visualizer.py
spaceship/: model.ipynb
